# media-ctl

./: .gitignore  Makefile  Makefile.am  configure.ac  configure.in  libmedia.pc.in  libsubdev.pc.in  main.c  media.c  media.h  options.c  options.h  subdev.c  subdev.h
debian/: control  libmedia-dev.install  libmedia.install  libsubdev-dev.install  libsubdev.install
src/: Makefile.am  main.c  media.c  media.h  mediactl-priv.h  mediactl.c  mediactl.h  options.c  options.h  subdev.c  subdev.h  v4l2subdev.c  v4l2subdev.h
